<resources>
    <string name="app_name">Submission_MLforAndroid</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_priview">Image Priview</string>
    <string name="cancer_detection">Cancer Detection</string>
    <string name="please_pick_photo_to_analyze">Please pick photo to analyze !</string>
    <string name="pick_photo">Select Photo</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="menu1">menu1</string>
    <string name="result_saved">Result Saved</string>
    <string name="image_cancer">Image Cancer</string>
    <string name="detectiion">Detectiion</string>
    <string name="confidence_score">Confidence Score: </string>
    <string name="save_result">Save Result</string>
    <string name="menu2">menu2</string>
    <string name="related_articel">Related Articel</string>
    <string name="judul">Judul</string>
    <string name="source">Source</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="Lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce molestie ligula nec arcu sollicitudin, quis placerat odio condimentum. In sed nisl auctor, interdum urna maximus, molestie urna.</string>
    <string name="analyze_result">Analyze Result</string>
    <string name="image_articel">Image Articel</string>
</resources>