<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.ResultActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analyze_result"
            android:textSize="24sp"
            android:fontFamily="@font/satoshiblack"/>

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/image"
            android:contentDescription="@string/image_priview" />

        <TextView
            android:id="@+id/result_text_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/result"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/satoshiblack"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confidence_score"
                android:textSize="16sp"

                android:fontFamily="@font/intersemibold"/>
            <TextView
                android:id="@+id/result_text_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="16sp"
                android:fontFamily="@font/intersemibold"/>
        </LinearLayout>



        <Button
            android:id="@+id/btn_saveResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_result"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/satoshiregular"/>
    </LinearLayout>
</ScrollView>