<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_cancer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_cancer" />

    <TextView
        android:id="@+id/tv_detection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detectiion"
        android:textSize="22sp"
        android:fontFamily="@font/satoshibold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/iv_cancer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_detection"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/confidence_score"
        android:textSize="18sp"
        android:fontFamily="@font/intersemibold"
        />
</androidx.constraintlayout.widget.ConstraintLayout>